syntax = "proto3";
option java_multiple_files = true;
package com.rafaandrade.grpc.stockprice;

message PriceRequest {
    string stockCode = 1;
}

message PriceResponse {
    string stockCode = 1;
    int64 stockPrice = 2;
}

service StockPriceService {
    rpc getPrice(PriceRequest) returns (PriceResponse);
}
